de6954 profile give menu scrollbars

--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -6,8 +6,8 @@
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100vh;
-  max-height: 100vh;
   left: 0;
+  max-height: 100vh;
   overflow-y: scroll;
   position: fixed;
   top: 48.25px;
@@ -27,6 +27,10 @@
     margin-right: 0;
   }
 
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+
   ul {
     &:last-of-type {
       padding-bottom: 30px;
@@ -40,7 +44,7 @@
 
 .profile-nav {
   &:after {
-    background-color: rgba($cr-black, 0.75);
+    background-color: rgba($cr-black, .75);
     content: ' ';
     height: 100%;
     left: 0;
@@ -48,14 +52,13 @@
     top: 0;
     width: 100%;
     z-index: -1;
-
   }
 
   .profile-nav-img {
-    box-sizing: border-box;
-    background-position:top;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: contain;
+    box-sizing: border-box;
     filter: blur(2px);
     height: 100%;
     left: 0;
@@ -67,7 +70,7 @@
 
   @media (min-width: $screen-md) {
     div {
-      padding-bottom: 0px;
+      padding-bottom: 0;
     }
   }
 }
