--- a/src/components/snail-trail/snail-trail-link/snail-trail-link.scss
+++ b/src/components/snail-trail/snail-trail-link/snail-trail-link.scss
@@ -8,28 +8,29 @@ a {
 
   &.active {
     &::before {
-      content: '';
-      position: absolute;
       border: 10px solid transparent;
       border-bottom: 0;
       border-top-color: $cr-cyan;
-      position: absolute;
+      content: '';
       left: 50%;
+      position: absolute;
       top: 0;
       transform: translateX(-50%);
     }
   }
 
-  &:hover {
-    &::after {
-      background-color: $cr-cyan;
-      bottom: 0;
-      content: '';
-      display: inline-block;
-      height: 2px;
-      left: 15px;
-      position: absolute;
-      width: calc(100% - 30px);
+  @media (hover) {
+    &:hover {
+      &::after {
+        background-color: $cr-cyan;
+        bottom: 0;
+        content: '';
+        display: inline-block;
+        height: 2px;
+        left: 15px;
+        position: absolute;
+        width: calc(100% - 30px);
+      }
     }
   }
 }
