--- a/src/components/crds-shared-header/global-nav/global-nav.scss
+++ b/src/components/crds-shared-header/global-nav/global-nav.scss
@@ -2,7 +2,7 @@ header {
   background-color: $cr-cyan;
   position: relative;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 2;
 
   @supports (position: sticky) {
