--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -63,8 +63,38 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, .95);
+  transition: opacity .5s ease-in-out; 
+  opacity: 1;
   z-index: 1;
+
+  .close {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 1rem;
+    right: 1rem;
+    background-color: rgba(187,187,187,0.6);
+    border-radius: 50%;
+    width: 1.5rem;
+    height: 1.5rem;
+    font-weight: unset;
+    opacity: 1;
+    padding: 0;
+    cursor: pointer;
+    border: 0;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    svg {
+      width: 10px;
+      height: 10px;
+      stroke: white;
+    }
+  }
 
   .dropdown {
     display: inline-block;
@@ -91,6 +121,11 @@
     border: solid 1px $cr-cyan;
     color: $cr-cyan;
   }
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
 
 // crds-styles
