--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -1,9 +1,15 @@
+@import './grid-mixins';
+
 * {
   box-sizing: border-box;
 }
 
 .relative {
   position: relative;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .d-flex {
@@ -56,10 +62,10 @@
 
   .dropdown-caret {
     position: absolute;
-    top: 0.8rem;
+    width: 0.75rem;
     right: 0;
-    font-size: 12px;
-    color: $cr-cyan;
+    fill: $cr-cyan;
+    padding-top: 4px;
   }
 }
 
@@ -70,8 +76,8 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, .95);
-  transition: opacity .5s ease-in-out; 
+  background-color: rgba(255, 255, 255, 0.95);
+  transition: opacity 0.5s ease-in-out;
   opacity: 1;
   z-index: 1;
 
@@ -82,7 +88,7 @@
     justify-content: center;
     top: 1rem;
     right: 1rem;
-    background-color: rgba(187,187,187,0.6);
+    background-color: rgba(187, 187, 187, 0.6);
     border-radius: 50%;
     width: 1.5rem;
     height: 1.5rem;
@@ -176,48 +182,54 @@ hr {
   margin-bottom: 12px !important;
 }
 
-.card-deck--expanded-layout {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+.card,
+.card-skeleton {
+  cursor: auto;
+  -webkit-flex: 1 0 270px;
+  -ms-flex: 1 0 270px;
+  flex: 1 0 270px;
+  flex-basis: 270px;
+  margin-bottom: 1rem;
+  padding: 0 0.5rem;
+  position: relative;
 
   @media (min-width: $screen-sm) {
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
+    max-width: 25%;
   }
 
-  .card,
-  .card-skeleton {
-    cursor: auto;
-    -webkit-flex: 1 0 270px;
-    -ms-flex: 1 0 270px;
-    flex: 1 0 270px;
-    flex-basis: 270px;
-    margin-bottom: 1rem;
-    padding: 0 0.5rem;
+  & a {
+    color: inherit; 
+    text-decoration: none;
+  }
+
+  .card-text {
+    font-size: 0.9375rem;
     position: relative;
+  }
 
-    @media (min-width: $screen-sm) {
-      max-width: 25%;
+  .card-block {
+    font-family: $base-font-face;
+    & .component-header {
+      line-height: 0.95;
     }
+  }
+}
 
-    & a {
-      color: inherit;
-      text-decoration: none;
+.cards-4x .card,
+.cards-4x .card-skeleton {
+  @media screen and (max-width: $screen-sm - 1) {
+    @include make-sm-column(12);
+  }
+  @media screen and (min-width: $screen-sm) and (max-width: $screen-md - 1) {
+    @include make-sm-column(6);
+    &:nth-child(odd) {
+      clear: left;
     }
-
-    .card-text {
-      font-size: .9375rem;
-      position: relative;
-    }
-
-    .card-block {
-      font-family: $base-font-face;
-      & .component-header {
-        line-height: .95;
-      }
+  }
+  @media screen and (min-width: $screen-md) {
+    @include make-sm-column(3);
+    &:nth-child(4n + 1) {
+      clear: left;
     }
   }
 }
