--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -1,6 +1,6 @@
-@import './grid-mixins';
-
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -182,65 +182,108 @@ hr {
   margin-bottom: 12px !important;
 }
 
-.card,
-.card-skeleton {
-  cursor: auto;
-  -webkit-flex: 1 0 270px;
-  -ms-flex: 1 0 270px;
-  flex: 1 0 270px;
-  flex-basis: 270px;
-  margin-bottom: 1rem;
-  padding: 0 0.5rem;
+.card-deck .card {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.card-deck--expanded-layout {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+
+  .card,
+  .card-skeleton {
+    cursor: auto;
+    -webkit-flex: 1 0 270px;
+    -ms-flex: 1 0 270px;
+    flex: 1 0 270px;
+    flex-basis: 270px;
+    margin-bottom: 1.5rem;
+    padding: 0 0.5rem;
+    position: relative;
+    max-width: 100%;
+
+    @media (min-width: 480px) {
+      max-width: 50%;
+    }
+
+    @media (min-width: 768px) {
+      max-width: 33.333333%;
+    }
+
+    @media (min-width: 960px) {
+      max-width: 25%;
+    }
+
+    & a {
+      color: inherit;
+      text-decoration: none;
+    }
+  
+    .card-text {
+      font-size: 0.9375rem;
+      position: relative;
+
+      p {
+        margin: 0;
+      }
+    }
+  
+    .card-block {
+      font-family: $base-font-face;
+      padding: 1rem;
+      & .component-header {
+        line-height: 0.95;
+      }
+    }
+  }
+}
+
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.card-title--overlap {
+  background-color: #fff;
+  display: inline-block;
+  font-family: 'acumin-pro-extra-condensed', sans-serif;
+  font-size: 2.125rem;
+  margin: -2rem -0.5rem 0;
+  padding: 0.25rem 0.5rem;
   position: relative;
 
-  @media (min-width: $screen-sm) {
-    max-width: 25%;
-  }
-
-  & a {
-    color: inherit; 
-    text-decoration: none;
-  }
-
-  .card-text {
-    font-size: 0.9375rem;
-    position: relative;
-  }
-
-  .card-block {
-    font-family: $base-font-face;
-    & .component-header {
-      line-height: 0.95;
-    }
+  &::after {
+    color: #979797;
+    content: '\2014';
+    display: block;
+    font-family: "acumin-pro",helvetica,arial,sans-serif;
+    font-size: 1.25rem;
+    font-weight: 100;
+    line-height: 1.5;
   }
 }
 
-.cards-4x .card,
-.cards-4x .card-skeleton {
-  @media screen and (max-width: $screen-sm - 1) {
-    @include make-sm-column(12);
-  }
-  @media screen and (min-width: $screen-sm) and (max-width: $screen-md - 1) {
-    @include make-sm-column(6);
-    &:nth-child(odd) {
-      clear: left;
-    }
-  }
-  @media screen and (min-width: $screen-md) {
-    @include make-sm-column(3);
-    &:nth-child(4n + 1) {
-      clear: left;
-    }
-  }
+.card-title {
+  color: #4d4d4d;
+  line-height: 1;
+  font-weight: 600;
 }
 
-.component-header {
-  font-family: $condensed-extra-font-face;
-  font-size: $font-size-h3; // 32px
-  font-weight: 500;
-  text-transform: uppercase;
-
-  @media screen and (min-width: $screen-xs) {
-    font-size: 2.125rem; // 34px
-  }
+.text-uppercase {
+  text-transform: uppercase !important;
 }
