--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -232,7 +232,7 @@ hr {
       color: inherit;
       text-decoration: none;
     }
-  
+
     .card-text {
       font-size: 0.9375rem;
       position: relative;
@@ -241,7 +241,7 @@ hr {
         margin: 0;
       }
     }
-  
+
     .card-block {
       font-family: $base-font-face;
       padding: 1rem;
@@ -271,7 +271,7 @@ hr {
     color: #979797;
     content: '\2014';
     display: block;
-    font-family: "acumin-pro",helvetica,arial,sans-serif;
+    font-family: 'acumin-pro', helvetica, arial, sans-serif;
     font-size: 1.25rem;
     font-weight: 100;
     line-height: 1.5;
@@ -286,4 +286,11 @@ hr {
 
 .text-uppercase {
   text-transform: uppercase !important;
+}
+
+.component-header {
+  font-family: 'acumin-pro-extra-condensed', sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
 }
