de6988 nav jumps below another element
add @supports for position sticky

--- a/src/components/crds-shared-header/global-nav/global-nav.scss
+++ b/src/components/crds-shared-header/global-nav/global-nav.scss
@@ -11,6 +11,10 @@ header {
 
   &.nav-is-showing {
     position: fixed;
+
+    @supports (position: sticky) {
+      position: sticky;
+    }
   }
 
   > div {
