move width to scss

--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -154,6 +154,10 @@
     border: solid 1px $cr-cyan;
     color: $cr-cyan;
   }
+
+  @media (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .hidden {
