--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -135,6 +135,10 @@
       border: solid 1px $cr-cyan;
       color: $cr-cyan;
       -webkit-appearance: none;
+
+      &:focus {
+        outline: 0;
+      }
   
       @media (max-width: 480px) {
         width: 100%;
