--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -52,7 +52,7 @@
     border: 0;
     margin: 0;
     color: $cr-cyan;
-    padding: .5rem 0;
+    padding: 0.5rem 0;
     -webkit-appearance: none;
     -moz-appearance: none;
 
@@ -64,7 +64,7 @@
     }
 
     @media (min-width: 480px) {
-      padding: .5rem;
+      padding: 0.5rem;
     }
   }
 
@@ -139,7 +139,7 @@
       &:focus {
         outline: 0;
       }
-  
+
       @media (max-width: 480px) {
         width: 100%;
       }
@@ -250,9 +250,10 @@ hr {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  overflow-x: scroll;
 
   .card,
   .card-skeleton {
@@ -262,13 +263,20 @@ hr {
     flex: 1 0 270px;
     flex-basis: 270px;
     margin-bottom: 1.5rem;
-    padding: 0;
+    padding: 0 0.5rem;
     position: relative;
     max-width: 100%;
 
+    &:first-child {
+      padding-left: 0;
+    }
+  
+    &:last-child {
+      padding-right: 0;
+    }
+
     @media (min-width: 480px) {
       max-width: 50%;
-      padding: 0 0.5rem;
     }
 
     @media (min-width: 768px) {
