--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -98,14 +98,14 @@
   opacity: 1;
   z-index: 1;
 
-  @media (min-width: 767px) {
+  @media (min-width: 768px) {
     align-items: center;
   }
 
   .happenings-dropdown {
     justify-content: center;
 
-    @media (min-width: 767px) {
+    @media (min-width: 768px) {
       margin: 0 auto;
       width: 33.333333%;
     }
@@ -254,6 +254,10 @@ hr {
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
   overflow-x: scroll;
+
+  @media (min-width: 768px) {
+    flex-wrap: wrap;
+  }
 
   .card,
   .card-skeleton {
