dropdown caret spacing

--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -47,6 +47,7 @@
   align-items: center;
 
   .happenings-dropdown-select {
+    font-size: 19px;
     position: relative;
     background: 0;
     border: 0;
@@ -55,6 +56,7 @@
     padding: 0.5rem 0;
     -webkit-appearance: none;
     -moz-appearance: none;
+    width: 100%;
 
     &:hover {
       cursor: pointer;
@@ -68,21 +70,25 @@
     }
   }
 
+  .dropdown-caret {
+    fill: $cr-cyan;
+    position: absolute;
+    width: 0.75rem;
+    right: 10px;
+    padding-top: 4px;
+    pointer-events: none; // allow clicks to fall through to select
+
+    @media (min-width: 480px) {
+      right: 0;
+    }
+  }
+
   .my-site-label {
     position: absolute;
     width: 100%;
     left: calc(100% + 0.625rem);
     font-size: 0.875rem;
     color: $cr-gray-light;
-  }
-
-  .dropdown-caret {
-    fill: $cr-cyan;
-    position: absolute;
-    width: 0.75rem;
-    right: 0;
-    padding-top: 4px;
-    pointer-events: none; // allow clicks to fall through to select
   }
 }
 
@@ -270,7 +276,7 @@ hr {
     &:first-child {
       padding-left: 0;
     }
-  
+
     &:last-child {
       padding-right: 0;
     }
