--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -66,7 +66,7 @@
     }
 
     @media (min-width: 480px) {
-      padding: 0.5rem;
+      padding: .5rem;
     }
   }
 
@@ -255,6 +255,7 @@ hr {
   -webkit-flex-flow: row nowrap;
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
+  -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
 
