--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -47,7 +47,7 @@
   align-items: center;
 
   .happenings-dropdown-select {
-    font-size: 19px;
+    font-size: 19px !important;
     position: relative;
     background: 0;
     border: 0;
@@ -74,12 +74,12 @@
     fill: $cr-cyan;
     position: absolute;
     width: 0.75rem;
-    right: 10px;
+    right: 0;
     padding-top: 4px;
     pointer-events: none; // allow clicks to fall through to select
 
     @media (min-width: 480px) {
-      right: 0;
+      right: 6px;
     }
   }
 
