--- a/src/components/crds-site-happenings/site-happenings.scss
+++ b/src/components/crds-site-happenings/site-happenings.scss
@@ -47,7 +47,7 @@
   align-items: center;
 
   .happenings-dropdown-select {
-    font-size: 19px !important;
+    font-size: 19px;
     position: relative;
     background: 0;
     border: 0;
