--- a/src/components/life-stages/life-stages.scss
+++ b/src/components/life-stages/life-stages.scss
@@ -1,7 +1,4 @@
-* {
-  box-sizing: border-box;
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
-}
+@import '../../shared/shared';
 
 p,
 h1,
@@ -12,26 +9,10 @@ h5 {
   margin: 0;
 }
 
-.fade {
-  opacity: 0;
-  transform: translateY(1rem);
-}
-
-.component-header {
-  font-family: 'acumin-pro-extra-condensed';
-  font-size: 2rem; // 32px
-  font-weight: 500;
-  text-transform: uppercase;
-
-  @media (min-width: 480px) {
-    font-size: 2.125rem; // 34px
-  }
-}
-
 .life-stages {
   background-color: #f0f0f0;
-  box-shadow: rgba(0, 0, 0, .15) 0 0 6px;
-  min-height: 580px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 0 6px;
+  min-height: 550px;
   overflow: hidden;
 
   .loading-skeleton {
@@ -43,7 +24,7 @@ h5 {
   }
 
   .life-stages-inner {
-    transition: all .45s ease;
+    transition: all 0.45s ease;
   }
 
   .life-stages-header {
@@ -57,11 +38,20 @@ h5 {
   grid-auto-flow: column;
   grid-column: 1 / -1;
   grid-gap: 20px;
-  grid-template-columns: .375rem;
+  grid-template-columns: 0.375rem;
   overflow-x: scroll;
   padding-bottom: 1rem;
   scroll-snap-type: x mandatory;
   scrollbar-base-color: transparent;
+
+  &.media-cards {
+    grid-auto-columns: 400px;
+
+    .card .image {
+      height: 56.25%;
+      width: 100%;
+    }
+  }
 
   @media (min-width: 768px) {
     grid-auto-columns: 220px;
@@ -71,24 +61,26 @@ h5 {
   &::before,
   &::after {
     content: '';
-    width: .75rem;
+    width: 0.75rem;
   }
 
   &::-webkit-scrollbar {
     display: none;
   }
 
-  .card {
+  .card,
+  .card-skeleton {
     height: 400px;
+    overflow: hidden;
     position: relative;
     scroll-snap-align: center;
-    transition: all .35s ease;
+    transition: all 0.35s ease;
 
     &:hover {
       cursor: pointer;
 
       .bg-overlay {
-        opacity: .75;
+        opacity: 0.75;
       }
     }
 
@@ -100,7 +92,7 @@ h5 {
 
     &.selected .bg-overlay {
       background: #0095d9;
-      opacity: .75;
+      opacity: 0.75;
     }
 
     .bg-overlay,
@@ -114,7 +106,7 @@ h5 {
     .bg-overlay {
       background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%);
       height: 100%;
-      transition: all .35s ease;
+      transition: all 0.35s ease;
     }
 
     .card-content {
@@ -124,7 +116,7 @@ h5 {
 
       .card-title,
       .card-subtitle {
-        letter-spacing: .5px;
+        letter-spacing: 0.5px;
         margin: 0;
         text-transform: uppercase;
       }
@@ -134,28 +126,63 @@ h5 {
       }
 
       .card-subtitle {
-        color: rgba(255, 255, 255, .75);
-        font-size: .75rem;
+        color: rgba(255, 255, 255, 0.75);
+        font-size: 0.75rem;
       }
     }
   }
 }
 
-.confirm-btn {
-  background-color: #0095d9;
-  border: 0;
-  color: #fff;
-  font-size: .875rem;
-  padding: 1rem 1.5rem;
-  text-transform: capitalize;
-  transition: all .35s ease;
-  width: 100%;
+.card-skeleton {
+  background-color: #ffffff;
+  position: relative;
 
-  &:hover {
-    cursor: pointer;
+  .content {
+    bottom: 0;
+    padding: 1rem;
+    position: absolute;
+    width: 100%;
+
+    .text {
+      background-color: #f0f0f0;
+      margin-top: .5rem;
+      overflow: hidden;
+      position: relative;
+
+      &::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        transform: translateX(-100%);
+        background-image: linear-gradient(
+          100deg,
+          rgb(240,240,240) 20%,
+          rgba(255,255,255, .3) 30%,
+          rgba(255,255,255, .7) 40%,
+          rgb(240,240,240) 50%,
+        );
+        animation: shimmer 1.5s infinite;
+        animation-timing-function: ease;
+        content: '';
+      }
+    }
+
+    .title {
+      height: 24px;
+      width: 90%;
+    }
+
+    .subtitle {
+      height: 16px;
+      width: 55%;
+    }
   }
+}
 
-  &:focus {
-    outline: 0;
+@keyframes shimmer {
+  to {
+    transform: translateX(100%);
   }
 }
