--- a/src/components/life-stages/life-stages.scss
+++ b/src/components/life-stages/life-stages.scss
@@ -11,8 +11,8 @@ h5 {
 
 .life-stages {
   background-color: #f0f0f0;
-  box-shadow: rgba(0, 0, 0, 0.15) 0 0 6px;
-  min-height: 550px;
+  box-shadow: rgba(0, 0, 0, .15) 0 0 6px;
+  min-height: 500px;
   overflow: hidden;
 
   .loading-skeleton {
@@ -24,7 +24,7 @@ h5 {
   }
 
   .life-stages-inner {
-    transition: all 0.45s ease;
+    transition: all .45s ease;
   }
 
   .life-stages-header {
@@ -38,7 +38,7 @@ h5 {
   grid-auto-flow: column;
   grid-column: 1 / -1;
   grid-gap: 20px;
-  grid-template-columns: 0.375rem;
+  grid-template-columns: .375rem;
   overflow-x: scroll;
   padding-bottom: 1rem;
   scroll-snap-type: x mandatory;
@@ -46,11 +46,6 @@ h5 {
 
   &.media-cards {
     grid-auto-columns: 400px;
-
-    .card .image {
-      height: 56.25%;
-      width: 100%;
-    }
   }
 
   @media (min-width: 768px) {
@@ -61,7 +56,7 @@ h5 {
   &::before,
   &::after {
     content: '';
-    width: 0.75rem;
+    width: .75rem;
   }
 
   &::-webkit-scrollbar {
@@ -70,18 +65,19 @@ h5 {
 
   .card,
   .card-skeleton {
+    cursor: pointer;
     height: 400px;
     overflow: hidden;
     position: relative;
     scroll-snap-align: center;
-    transition: all 0.35s ease;
+    transition: all .35s ease;
 
     &:hover {
       cursor: pointer;
+    }
 
-      .bg-overlay {
-        opacity: 0.75;
-      }
+    &:hover .bg-overlay {
+      opacity: .75;
     }
 
     // use this for the select icon
@@ -92,7 +88,7 @@ h5 {
 
     &.selected .bg-overlay {
       background: #0095d9;
-      opacity: 0.75;
+      opacity: .75;
     }
 
     .bg-overlay,
@@ -106,7 +102,7 @@ h5 {
     .bg-overlay {
       background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%);
       height: 100%;
-      transition: all 0.35s ease;
+      transition: all .35s ease;
     }
 
     .card-content {
@@ -116,7 +112,7 @@ h5 {
 
       .card-title,
       .card-subtitle {
-        letter-spacing: 0.5px;
+        letter-spacing: .5px;
         margin: 0;
         text-transform: uppercase;
       }
@@ -126,8 +122,8 @@ h5 {
       }
 
       .card-subtitle {
-        color: rgba(255, 255, 255, 0.75);
-        font-size: 0.75rem;
+        color: rgba(255, 255, 255, .75);
+        font-size: .75rem;
       }
     }
   }
@@ -158,10 +154,10 @@ h5 {
         transform: translateX(-100%);
         background-image: linear-gradient(
           100deg,
-          rgb(240,240,240) 20%,
-          rgba(255,255,255, .3) 30%,
-          rgba(255,255,255, .7) 40%,
-          rgb(240,240,240) 50%,
+          rgb(240, 240, 240) 20%,
+          rgba(255, 255, 255, .3) 30%,
+          rgba(255, 255, 255, .7) 40%,
+          rgb(240, 240, 240) 50%
         );
         animation: shimmer 1.5s infinite;
         animation-timing-function: ease;
