--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -27,16 +27,17 @@
   width: 100%;
 }
 
+.img-responsive {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
 .card-skeleton {
   svg {
     height: auto;
     width: 100%;
   }
-}
-
-a.no-style {
-  color: inherit;
-  text-decoration: inherit;
 }
 
 hr {
@@ -65,10 +66,10 @@ hr {
 
 .text-uppercase {
   text-transform: uppercase;
- 
+
   &.font-size-smaller {
     font-size: 13px !important;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
   }
 }
 
@@ -89,6 +90,10 @@ hr {
   @media (min-width: 480px) {
     font-size: 19px !important;
   }
+}
+
+.font-size-smaller {
+  font-size: 14px !important;
 }
 
 .font-size-smallest {
@@ -115,20 +120,16 @@ hr {
   margin-top: 24px;
 }
 
+.push-half-top {
+  margin-top: 12px !important;
+}
+
+.soft-quarter-top {
+  padding-top: 6px;
+}
+
 .text-gray {
   color: gray;
-}
-
-.fade {
-  animation: 0.35s ease-in-out fadeout;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadeout {
-  to {
-    opacity: 0;
-    transform: translateY(1rem);
-  }
 }
 
 .display-none {
@@ -139,11 +140,23 @@ hr {
   font-family: 'acumin-pro-extra-condensed';
   font-size: 2rem; // 32px
   font-weight: 500;
-  line-height: .95;
+  line-height: 0.95;
   text-transform: uppercase;
 
   @media (min-width: 480px) {
     font-size: 2.125rem; // 34px
+  }
+}
+
+.card {
+  > a {
+    color: inherit;
+    display: block;
+    text-decoration: none;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
@@ -155,7 +168,7 @@ hr {
   bottom: 0;
   padding: 6px 8px;
 
-  >*:not(:last-child) {
+  > *:not(:last-child) {
     margin-right: 5px;
   }
 
