--- a/src/components/life-stages/life-stages.scss
+++ b/src/components/life-stages/life-stages.scss
@@ -17,6 +17,7 @@ h5 {
 .life-stages {
   background-color: #f0f0f0;
   box-shadow: rgba(0, 0, 0, .15) 0 0 6px;
+  min-height: 500px;
   overflow: hidden;
 
   .life-stages-inner {
@@ -82,7 +83,7 @@ h5 {
     }
 
     &:hover .bg-overlay {
-      opacity: .75;
+      opacity: 75;
     }
 
     .bg-overlay,
@@ -96,7 +97,7 @@ h5 {
     .bg-overlay {
       background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 50%);
       height: 100%;
-      transition: all .35s ease;
+      transition: all 35s ease;
     }
 
     .card-content {
@@ -116,8 +117,8 @@ h5 {
       }
 
       .card-subtitle {
-        color: rgba(255, 255, 255, .75);
-        font-size: .75rem;
+        color: rgba(255, 255, 255, 75);
+        font-size: 75rem;
       }
     }
   }
@@ -149,8 +150,8 @@ h5 {
         background-image: linear-gradient(
           100deg,
           rgb(240, 240, 240) 20%,
-          rgba(255, 255, 255, 0.3) 30%,
-          rgba(255, 255, 255, 0.7) 40%,
+          rgba(255, 255, 255, .3) 30%,
+          rgba(255, 255, 255, .7) 40%,
           rgb(240, 240, 240) 50%
         );
         animation: shimmer 1.5s infinite;
@@ -168,6 +169,45 @@ h5 {
       height: 16px;
       width: 55%;
     }
+  }
+}
+
+.text-skeleton {
+  .title,
+  .subtitle {
+    background-color: #fff;
+    overflow: hidden;
+    position: relative;
+
+    &::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: translateX(-100%);
+      background-image: linear-gradient(
+        100deg,
+        rgb(255, 255, 255) 20%,
+        rgba(240, 240, 240, .3) 30%,
+        rgba(240, 240, 240, .7) 40%,
+        rgb(255, 255, 255) 50%
+      );
+      animation: shimmer 1.5s infinite;
+      animation-timing-function: ease;
+      content: '';
+    }
+  }
+
+  .title {
+    height: 24px;
+    margin-bottom: 1rem;
+    width: 35%;
+  }
+
+  .subtitle {
+    height: 16px;
+    width: 50%;
   }
 }
 
