--- a/src/components/life-stages/life-stages.scss
+++ b/src/components/life-stages/life-stages.scss
@@ -117,8 +117,8 @@ h5 {
       }
 
       .card-subtitle {
-        color: rgba(255, 255, 255, 75);
-        font-size: 75rem;
+        color: rgba(255, 255, 255, .75);
+        font-size: .75rem;
       }
     }
   }
