--- a/src/components/life-stages/life-stages.scss
+++ b/src/components/life-stages/life-stages.scss
@@ -32,17 +32,9 @@ h5 {
     display: flex;
     padding: 1.5rem;
 
-    .life-stages-avatar {
-      align-items: center;
-      background-color: #fff;
-      border: 1px solid #efefef;
-      border-radius: 50%;
-      display: flex;
-      height: 48px;
-      justify-content: center;
+    .life-stage-selected {
+      font-size: .875rem;
       margin-left: auto;
-      min-width: 48px;
-      width: 48px;
     }
   }
 }
