--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -19,6 +19,10 @@
   display: block;
 }
 
+.d-inline {
+  display: inline;
+}
+
 .d-none {
   display: none;
 }
@@ -166,5 +170,57 @@ hr {
     fill: #fff;
     height: 16px;
     width: 12px;
+  }
+}
+
+// btns
+
+.btn {
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 300;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  padding: 8px 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-radius: 4px;
+  line-height: 1;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  padding: 13px 16px;
+
+  &.btn-gray-light {
+    color: #fff;
+    background-color: #979797;
+    border-color: #979797;
+  }
+
+  &.btn-gray-light.btn-outline {
+    background: transparent;
+    border-style: solid;
+    border-width: 1px;
+    color: #979797;
+
+    &:hover {
+      background-color: #979797;
+      color: #fff;
+    }
+  }
+
+  &.btn-sm {
+    font-size: 13px;
+    padding: 10px 16px 11px;
   }
 }
