--- a/src/components/crds-recommended-content/crds-recommended-content.scss
+++ b/src/components/crds-recommended-content/crds-recommended-content.scss
@@ -16,7 +16,7 @@ h5 {
 
 .life-stages {
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, .15) 0 0 6px;
+  border: 1px solid #f0f0f0;
   min-height: 300px;
   overflow: hidden;
 
@@ -30,7 +30,7 @@ h5 {
 
   .life-stages-header {
     display: flex;
-    padding: 1.5rem;
+    padding: 1.875rem;
 
     .life-stage-selected {
       font-size: .875rem;
@@ -44,11 +44,11 @@ h5 {
   grid-auto-columns: 180px;
   grid-auto-flow: column;
   grid-column: 1 / -1;
-  grid-gap: 1.5rem;
+  grid-gap: 1.875rem;
   grid-template-columns: .375rem;
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.875rem;
   scroll-snap-type: x mandatory;
   scrollbar-base-color: transparent;
 
