--- a/src/components/crds-shared-header/profile-nav/profile-nav.scss
+++ b/src/components/crds-shared-header/profile-nav/profile-nav.scss
@@ -58,7 +58,7 @@
   .profile-nav-img {
     background-position: top;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% auto;
     box-sizing: border-box;
     filter: blur(2px);
     height: 100%;
