--- a/src/components/crds-recommended-content/crds-recommended-content.scss
+++ b/src/components/crds-recommended-content/crds-recommended-content.scss
@@ -1,4 +1,5 @@
 @import '../../shared/shared';
+@import '../../shared/skeleton.scss';
 
 p,
 h1,
@@ -79,7 +80,7 @@ h5 {
   }
 
   .card,
-  .card-skeleton {
+  .skeleton-life-stage {
     cursor: pointer;
     height: 320px;
     overflow: hidden;
@@ -136,9 +137,8 @@ h5 {
   }
 }
 
-.card-skeleton {
+.skeleton-life-stage {
   background-color: #f0f0f0;
-  position: relative;
 
   .content {
     bottom: 0;
@@ -151,25 +151,6 @@ h5 {
       margin-top: .5rem;
       overflow: hidden;
       position: relative;
-
-      &::after {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        transform: translateX(-100%);
-        background-image: linear-gradient(
-          100deg,
-          rgb(255, 255, 255) 20%,
-          rgba(240, 240, 240, .3) 30%,
-          rgba(240, 240, 240, .7) 40%,
-          rgb(255, 255, 255) 50%
-        );
-        animation: shimmer 1.5s infinite;
-        animation-timing-function: ease;
-        content: '';
-      }
     }
 
     .title {
@@ -192,25 +173,6 @@ h5 {
     background-color: #f0f0f0;
     overflow: hidden;
     position: relative;
-
-    &::after {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      transform: translateX(-100%);
-      background-image: linear-gradient(
-        100deg,
-        rgb(240, 240, 240) 20%,
-        rgba(255, 255, 255, .3) 30%,
-        rgba(255, 255, 255, .7) 40%,
-        rgb(240, 240, 240) 50%
-      );
-      animation: shimmer 1.5s infinite;
-      animation-timing-function: ease;
-      content: '';
-    }
   }
 
   .title {
