--- a/src/shared/skeleton.scss
+++ b/src/shared/skeleton.scss
@@ -29,8 +29,8 @@
     background-image: linear-gradient(
       100deg,
       rgb(255, 255, 255) 20%,
-      rgba(240, 240, 240, .3) 30%,
-      rgba(240, 240, 240, .7) 40%,
+      rgba(240, 240, 240, 0.3) 30%,
+      rgba(240, 240, 240, 0.7) 40%,
       rgb(255, 255, 255) 50%
     );
   }
