remove border/padding at small sizes

--- a/src/components/crds-recommended-content/crds-recommended-content.scss
+++ b/src/components/crds-recommended-content/crds-recommended-content.scss
@@ -16,12 +16,12 @@ h5 {
 
 .life-stages {
   background-color: #fff;
-  border: 1px solid #f0f0f0;
   min-height: 300px;
   overflow: hidden;
 
   @media (min-width: 768px) {
-    min-height: 528px;
+    min-height: 500px;
+    border: 1px solid #f0f0f0;
   }
 
   .life-stages-inner {
@@ -31,10 +31,11 @@ h5 {
   .life-stages-header {
     display: flex;
     flex-direction: column;
-    padding: 1.875rem;
+    padding-bottom: 1.875rem;
 
     @media (min-width: 768px) {
       flex-direction: row;
+      padding: 1.875rem;
     }
 
     .life-stage-selected {
@@ -52,8 +53,7 @@ h5 {
   grid-auto-columns: 180px;
   grid-auto-flow: column;
   grid-column: 1 / -1;
-  grid-gap: 1.875rem;
-  grid-template-columns: .375rem;
+  grid-gap: 1rem;
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
   padding-bottom: 1.875rem;
@@ -65,29 +65,31 @@ h5 {
   }
 
   @media (min-width: 768px) {
+    grid-template-columns: .375rem;
     grid-auto-columns: 220px;
+    grid-gap: 1.875rem;
+
+    &::before,
+    &::after {
+      content: '';
+      width: .75rem;
+    }
 
     &.media-cards {
       grid-auto-columns: 400px;
     }
   }
 
-  &::before,
-  &::after {
-    content: '';
-    width: .75rem;
-  }
-
   .card,
   .card-skeleton {
     cursor: pointer;
-    height: 320px;
+    height: 340px;
     overflow: hidden;
     position: relative;
-    scroll-snap-align: center;
+    scroll-snap-align: start;
 
     @media (min-width: 768px) {
-      height: 400px;
+      scroll-snap-align: center;
     }
 
     &:hover {
