--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
 }
 
 .relative {
@@ -41,6 +40,10 @@
   max-width: 100%;
 }
 
+.img-circle {
+  border-radius: 50%;
+}
+
 hr {
   border: 0;
   border-top: 1px solid #e7e7e7;
@@ -52,6 +55,11 @@ hr {
 .font-family-base {
   font-family: 'acumin-pro', helvetica, arial, sans-serif !important;
   font-weight: 300 !important;
+}
+
+.font-family-condensed-extra {
+  font-family: 'acumin-pro-extra-condensed', sans-serif !important;
+  font-weight: 500 !important;
 }
 
 .text-white {
@@ -153,6 +161,13 @@ hr {
   @media (min-width: 480px) {
     font-size: 2.125rem; // 34px
   }
+}
+
+.list-header {
+  font-family: 'acumin-pro-extra-condensed', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .card {
