--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -1,10 +1,20 @@
 .crds-img-container {
+  display: block;
   background-color: rgb(231, 231, 231);
   position: relative;
   overflow: hidden;
-  width: 100%;
-  height: 202px;
 
+  &.card {
+    height: 202px;
+  }
+
+  &.thumbnail {
+    height: 65px;
+  }
+
+  .crds-img {
+    height: 100%;
+  }
   .crds-img.loaded {
     animation-name: fade-in;
     animation-duration: 1s;
