--- a/src/components/crds-media-card/layouts/crds-default-layout/crds-default-layout.scss
+++ b/src/components/crds-media-card/layouts/crds-default-layout/crds-default-layout.scss
@@ -1,6 +1,7 @@
 .card-wrapper {
   margin-bottom: 2.75rem;
   max-width: 360px;
+  font-family: 'acumin-pro', helvetica, arial, sans-serif;
 }
 
 .card-image-wrapper {
@@ -11,10 +12,10 @@
 
 .card-stamp-container {
   background-color: rgba(23, 23, 23, 0.9);
-  bottom: 0;
+  top: 1em;
   padding: 0.25rem;
   position: absolute;
-  right: 0;
+  left: 1em;
   display: flex;
 
   > * {
@@ -25,16 +26,15 @@
 .card-stamp {
   display: inline-block;
   color: #ffffff;
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
-  font-size: 10px;
+  font-size: 0.625rem;
   font-weight: 600;
+  text-transform: uppercase;
 }
 
 .card-meta-top {
   color: #737373;
   display: block;
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
-  font-size: 12px;
+  font-size: 0.8125rem;
   font-weight: 500;
   line-height: 1.67;
   text-transform: uppercase;
@@ -49,8 +49,9 @@
   margin: 0 0 0.5rem;
   text-transform: uppercase;
   transition: color 300ms;
+  user-select: none;
 
-  &.hover:hover {
+  &:hover {
     color: black;
   }
 }
@@ -58,21 +59,27 @@
 .card-meta-bottom {
   color: #979797;
   display: block;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 300;
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
   line-height: 1;
   margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 .card-content {
-  font-family: 'acumin-pro', helvetica, arial, sans-serif;
-  display: block;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 24px;
-  color: #4d4d4d;
-  margin: 0.5rem 0 0 0;
+  overflow-y: hidden;
+  p {
+    display: block;
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 24px;
+    color: #4d4d4d;
+    margin: 0;
+    a {
+      text-decoration: none;
+      color: #0095d9;
+    }
+  }
 }
 
 .hover {
@@ -81,17 +88,30 @@
   }
 }
 
-crds-card {
-  .active {
-    display: none !important;
-    border: 1px solid red;
-
-    .card-wrapper {
-      display: none !important;
-    }
-  }
-}
-
 .inactive {
   display: none;
+}
+
+.card-button {
+  display: inline-block;
+  background-color: #3b6e8f;
+  color: #ffffff;
+  border-radius: 4px;
+  margin-top: 1.375em;
+  text-decoration: none;
+  cursor: pointer;
+  height: 43px;
+  vertical-align: middle;
+  line-height: 43px;
+  padding: 0 1rem;
+  font-size: 0.875rem;
+}
+
+.card-thumbnail {
+  background-color: rgba(23, 23, 23, 0.9);
+  top: 1em;
+  position: absolute;
+  right: 1em;
+  max-width: 65px;
+  max-height: 65px;
 }
