--- a/src/components/crds-group-list/crds-group-list.scss
+++ b/src/components/crds-group-list/crds-group-list.scss
@@ -9,6 +9,18 @@
   }
 }
 
+.groups-cta {
+  @extend .font-family-base;
+
+  span div {
+    display: inline;
+  }
+
+  strong {
+    font-weight: 600;
+  }
+}
+
 .group {
   border-bottom: 1px solid $cr-gray-lighter;
 
@@ -32,25 +44,6 @@
     .leader-tag {
       margin: $line-height-computed/2 0;
     }
-
-    .label {
-      @extend .font-family-base;
-      font-size: 12px;
-      margin-top: 9px;
-      padding: 5px 6px 4px;
-      display: inline;
-      font-weight: 500 !important;
-      line-height: 1;
-      color: #4d4d4d;
-      text-align: center;
-      white-space: nowrap;
-      vertical-align: baseline;
-      border-radius: .25em;
-    }
-
-    .label-info {
-      background-color: #b6dee6;
-    }
   }
 
   .group-image {
@@ -59,13 +52,14 @@
     margin-left: auto;
     background-size: cover;
     background-position: 0;
+    background-repeat: no-repeat;
 
     &.img-circle {
-      border-color: rgba(231, 231, 231, 0.4);
-      border-style: solid;
-      border-width: 2px;
+      border: 0px;
+      -webkit-box-shadow: inset 0px 0px 0px 2px rgba(231,231,231,0.4);
+      -moz-box-shadow: inset 0px 0px 0px 2px rgba(231,231,231,0.4);
+      box-shadow: inset 0px 0px 0px 2px rgba(231,231,231,0.4);
       background-size: cover;
-      place-self: flex-end;
     }
   }
 }
