--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -66,6 +66,10 @@ hr {
   color: #fff !important;
 }
 
+.text-gray-dark {
+  color: #4d4d4d !important;  
+}
+
 .text-gray-light {
   color: #979797 !important;
 }
@@ -232,11 +236,24 @@ hr {
   margin-bottom: 5px;
   font-size: 14px;
   padding: 13px 16px;
+  text-decoration: none;
 
   &.btn-gray-light {
     color: #fff;
     background-color: #979797;
     border-color: #979797;
+  }
+
+  &.btn.btn-blue,
+  &.btn.btn-primary {
+    color: #fff;
+    background-color: #3b6e8f;
+    border-color: #3b6e8f;
+
+    &:hover {
+      background-color: #2c526b;
+      border-color: #294d64;
+    }
   }
 
   &.btn-gray-light.btn-outline {
@@ -254,5 +271,27 @@ hr {
   &.btn-sm {
     font-size: 13px;
     padding: 10px 16px 11px;
+  }
+}
+
+// Labels
+
+.label {
+  font-family: "lexia",serif;
+  font-size: 12px;
+  margin-top: 9px;
+  padding: 5px 6px 4px;
+  display: inline;
+  font-weight: 500 !important;
+  line-height: 1;
+  color: #4d4d4d;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+  font-style: italic;
+
+  &.label-info {
+    background-color: #b6dee6;
   }
 }
