--- a/src/components/crds-group-list/crds-group-list.scss
+++ b/src/components/crds-group-list/crds-group-list.scss
@@ -3,7 +3,8 @@
 
 .group-list {
   border-top: 1px solid $cr-gray-lighter;
-
+  max-height: 520px;
+  overflow: scroll;
   p {
     margin: $line-height-computed/2 0 $line-height-computed 0;
   }
