--- a/src/components/crds-media-card/layouts/crds-default-layout/crds-default-layout.scss
+++ b/src/components/crds-media-card/layouts/crds-default-layout/crds-default-layout.scss
@@ -1,11 +1,11 @@
 .card-wrapper {
-  margin-bottom: 2.75rem;
+  margin-bottom: 2.75em;
   max-width: 360px;
   font-family: 'acumin-pro', helvetica, arial, sans-serif;
 }
 
 .card-image-wrapper {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
   overflow: hidden;
   position: relative;
 }
@@ -14,21 +14,21 @@
   box-sizing: border-box;
   background-color: rgba(23, 23, 23, 0.9);
   top: 1em;
-  padding: 0.5rem;
+  padding: 0.5em;
   position: absolute;
   left: 1em;
   display: flex;
   max-height: 28px;
 
   .card-stamp {
-    margin-left: 0.25rem;
+    margin-left: 0.25em;
   }
 }
 
 .card-stamp {
   display: inline-block;
   color: #ffffff;
-  font-size: 0.625rem;
+  font-size: 0.625em;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 1;
@@ -37,7 +37,7 @@
 .card-meta-top {
   color: #737373;
   display: block;
-  font-size: 0.8125rem;
+  font-size: 0.8125em;
   font-weight: 500;
   line-height: 1.67;
   text-transform: uppercase;
@@ -49,7 +49,7 @@
   font-size: 38px;
   font-weight: 500;
   line-height: 0.89;
-  margin: 0 0 0.5rem;
+  margin: 0 0 0.5em;
   text-transform: uppercase;
   transition: color 300ms;
   user-select: none;
@@ -62,18 +62,18 @@
 .card-meta-bottom {
   color: #979797;
   display: block;
-  font-size: 0.8125rem;
+  font-size: 0.8125em;
   font-weight: 300;
   line-height: 1;
   margin: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
 }
 
 .card-content {
   overflow-y: hidden;
   p {
     display: block;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 300;
     line-height: 24px;
     color: #4d4d4d;
@@ -82,12 +82,6 @@
       text-decoration: none;
       color: #0095d9;
     }
-  }
-}
-
-.hover {
-  &:hover {
-    cursor: pointer;
   }
 }
 
@@ -106,8 +100,8 @@
   height: 43px;
   vertical-align: middle;
   line-height: 43px;
-  padding: 0 1rem;
-  font-size: 0.875rem;
+  padding: 0 1em;
+  font-size: 0.875em;
 }
 
 .card-thumbnail {
