US17970-media-card - Adds color styles - Updates stylesheets to include colors

--- a/src/assets/stylesheets/globals/_variables.scss
+++ b/src/assets/stylesheets/globals/_variables.scss
@@ -1,2 +1,44 @@
 $global-nav-padding: 15px;
 $close-container-height: 125px;
+
+//
+
+$blue: #3b6e8f;
+$blue-dark: #274254;
+$blue-light: #a5bdcc;
+$blue-lighter: #dbe4ea;
+
+$cyan: #0095d9;
+$cyan-dark: #006d9e;
+$cyan-dark-b: #3b6e8f;
+$cyan-light: #8bceed;
+$cyan-lighter: #d8ebf8;
+$teal: #57afa9;
+$teal-dark: #41807b;
+$teal-light: #b3dad7;
+$teal-lighter: #e0f0ef;
+
+$orange: #c05c04;
+$orange-dark: #8c4303;
+$orange-light: #e2b48c;
+$orange-lighter: #f3e1d1;
+$gold: #e09e06;
+$gold-dark: #a37304;
+$gold-light: #f0d28c;
+$gold-lighter: #f9edd1;
+
+$gray-darker: #151515;
+$gray-dark: #4d4d4d;
+$gray: #737373;
+$gray-light: #979797;
+$gray-lighter: #e7e7e7;
+
+$white: #ffffff;
+$black: #000000;
+$rust: #cc2255;
+$green: #6acc93;
+$success: #6acc93;
+$alert-info: #6abccc;
+$alert-warning: #debc73;
+
+$black-opaque: #171717e6;
