--- a/src/components/crds-icon/crds-icon.scss
+++ b/src/components/crds-icon/crds-icon.scss
@@ -1,11 +1,5 @@
 .svg-container {
-  position: relative;
-
-  & svg {
+  svg {
     display: block;
-
-     & g {
-        display: block;
-     }
   }
 }
