DE7214 Make cursor a pointer when hovering over nav items

--- a/src/components/crds-shared-header/global-nav/global-nav.scss
+++ b/src/components/crds-shared-header/global-nav/global-nav.scss
@@ -110,6 +110,7 @@ $icon-size: 22px;
 .profile-container,
 .search-container {
   color: $cr-white;
+  cursor: pointer;
   display: flex;
   text-decoration: none;
 
