Adjusted header to match DDK styles
TODO: we need to make these styles sharable, I don't like that we are duplicating CSS.

--- a/src/components/crds-group-list/crds-group-list.scss
+++ b/src/components/crds-group-list/crds-group-list.scss
@@ -23,6 +23,7 @@
 .group-list-header {
   min-height: 28px;
   margin: $line-height-computed/2 0;
+  font-size: 19px !important;
 
   p {
     margin: 0;
