--- a/src/components/crds-shared-header/profile-nav/profile-nav.scss
+++ b/src/components/crds-shared-header/profile-nav/profile-nav.scss
@@ -45,7 +45,7 @@
 
 .profile-nav {
   &:after {
-    background-color: rgba($cr-black, .75);
+    background-color: rgba($cr-black, 0.75);
     content: ' ';
     height: 100%;
     left: 0;
