add soft-quarter padding class for better mobile experience

--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -163,6 +163,10 @@ hr {
   padding-top: 6px;
 } 
 
+.soft-quarter-right {
+  padding-right: 6px;
+}
+
 .soft-half-ends {
   padding-top: 12px !important;
   padding-bottom: 12px !important;
